--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </div>
 <div>
   <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bRNwjctVLZg"
-<section></section>
-</body>
-</html>
+<section>
+    <h2>FIlmes e séries</h2>
+    <section class="categoria"
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">     
