--- a/index.html
+++ b/index.html
@@ -6,20 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">           
+<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <section>
+        <div>
+    <header>ARlINDAFLIX</header>
+    <h3>Rainha das lagrimas
+    </div>
     <div>
-    <header>ARLINDAFLIX</header>
-    <h3>É pra isso que eu pago a Internet
-</div>
-<div>
-  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bRNwjctVLZg"
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=_rNtXO6JuaQ"
+    </section>
+</body>
+</html>
+
 <section>
-    <h2>FIlmes e séries</h2>
-    <section class="categoria"
+    <h2>Filmes e séries</h2>
+    <section class="categoria">
         <h2>Filmes e séries</h2>
-        <div class="categoria-videos">     
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=hFsa_QuyJJ0">
+            <img src="https://img.youtube.com/vi/hFsa_QuyJJ0/maxresdefault.jpg">
+            </a>
+           
+            <a href="https://www.youtube.com/watch?v=NtQK0HiSZqs">
+                <img src="https://img.youtube.com/vi/NtQK0HiSZqs/maxresdefault.jpg">
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=HxFJKclVgzo">
+                <img src="https://img.youtube.com/vi/HxFJKclVgzo/maxresdefault.jpg">
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=-efr8k_N8Iw">
+                <img src="https://img.youtube.com/vi/-efr8k_N8Iw/maxresdefault.jpg">
+            </a>
+        </div>
+    </section>
+
+</section> 
+<h2>Fime e série</h2>
+<section class="categoria">
+    <h2>Filmes e séries</h2>
+    <div class="categoria-videos"></div>
+</section>
