--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <section>
         <div>
-    <header>ARlINDAFLIX</header>
-    <h3>Rainha das lagrimas
+    <header>TENTE NÃO RIR</header>
+    <h3>É pra isso que eu pago a internet "TENTE NÃO RIR"
     </div>
     <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=_rNtXO6JuaQ"
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=_rNtXO6JuaQ">
     </section>
 </body>
 </html>
@@ -44,10 +44,4 @@
             </a>
         </div>
     </section>
-
-</section> 
-<h2>Fime e série</h2>
-<section class="categoria">
-    <h2>Filmes e séries</h2>
-    <div class="categoria-videos"></div>
-</section>
+    
